--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <html>
   <head>
+    
+    <title></title>
+    
+    <!-- open-graph tags for social previews -->
+    <meta property="og:url"                content="https://memojify.me" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Welcome" />
+    <meta property="og:description"        content="A personal/professional site to show projects and the like of Chuqian (Susan) Li." />
+  
+    <!-- site description -->
+    <meta name="description" content="A personal/professional site to show projects and the like of Chuqian (Susan) Li." />
   </head>
   <body>
-    Hello World
+    <div id="app-container"></div>
+    <script src="/app.js"></script>
   </body>
 </html>
