--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="app-container"></div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
