--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <meta name="description" content="A personal/professional site to show projects and the like of Chuqian (Susan) Li." />
   </head>
   <body>
-    <div id="app-container"></div>
-    <script src="app.js"></script>
+    Hello World.
   </body>
 </html>
